src/lsi/parser/PLIModelParser.java
// Generated from C:/Users/Miguel Toro/Proyecto_antlr/antlr/grammars/PLIModel.g4 by ANTLR 4.13.2
package lsi.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PLIModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		HEAD_SECTION=46, GOAL_SECTION=47, CONSTRAINTS_SECTION=48, BOUNDS_SECTION=49, 
		BIN_SECTION=50, INT_SECTION=51, FREE_SECTION=52, SEMI_SECTION=53, ID=54, 
		INT=55, DOUBLE=56, WS=57, COMMENT=58, LINE_COMMENT=59, ERROR_CHAR=60;
	public static final int
		RULE_model = 0, RULE_head = 1, RULE_goal = 2, RULE_constraints = 3, RULE_bounds = 4, 
		RULE_bin_vars = 5, RULE_int_vars = 6, RULE_free_vars = 7, RULE_semi_continuous_vars = 8, 
		RULE_objective = 9, RULE_declaration = 10, RULE_formal_parameters = 11, 
		RULE_formal_parameter = 12, RULE_type = 13, RULE_var_collection = 14, 
		RULE_expr_collection = 15, RULE_linear_expr_collection = 16, RULE_set_of_constraints = 17, 
		RULE_set_of_bounds = 18, RULE_set_of_LinearExprs = 19, RULE_set_of_vars = 20, 
		RULE_set_of_expressions = 21, RULE_constraint = 22, RULE_atomic_constraint = 23, 
		RULE_compound_constraint = 24, RULE_bound = 25, RULE_linear_expr = 26, 
		RULE_slinear_term = 27, RULE_linear_term = 28, RULE_set_of_linear_factor = 29, 
		RULE_linear_factor = 30, RULE_var = 31, RULE_index_list = 32, RULE_index = 33, 
		RULE_pair = 34, RULE_expression = 35, RULE_function_call = 36, RULE_rel_op = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "head", "goal", "constraints", "bounds", "bin_vars", "int_vars", 
			"free_vars", "semi_continuous_vars", "objective", "declaration", "formal_parameters", 
			"formal_parameter", "type", "var_collection", "expr_collection", "linear_expr_collection", 
			"set_of_constraints", "set_of_bounds", "set_of_LinearExprs", "set_of_vars", 
			"set_of_expressions", "constraint", "atomic_constraint", "compound_constraint", 
			"bound", "linear_expr", "slinear_term", "linear_term", "set_of_linear_factor", 
			"linear_factor", "var", "index_list", "index", "pair", "expression", 
			"function_call", "rel_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'min'", "'max'", "'='", "'('", "')'", "','", "'Integer'", "'Double'", 
			"'Boolean'", "'String'", "'|'", "'or'", "'=>'", "'!='", "'->'", "'=='", 
			"'allDifferent'", "'permutation'", "';'", "'in'", "'MAX'", "'MIN'", "'OR'", 
			"'AND'", "'ABS'", "'PWL'", "':'", "'<='", "'+'", "'-'", "'sum'", "'['", 
			"']'", "'..'", "'*'", "'/'", "'%'", "'<'", "'>'", "'>='", "'&&'", "'||'", 
			"'!'", "'(int)'", "'(double)'", "'head section'", "'goal section'", "'constraints section'", 
			"'bounds section'", "'bin'", "'int'", "'free'", "'semi-continuous'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "HEAD_SECTION", 
			"GOAL_SECTION", "CONSTRAINTS_SECTION", "BOUNDS_SECTION", "BIN_SECTION", 
			"INT_SECTION", "FREE_SECTION", "SEMI_SECTION", "ID", "INT", "DOUBLE", 
			"WS", "COMMENT", "LINE_COMMENT", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PLIModel.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PLIModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModelContext extends ParserRuleContext {
		public GoalContext goal() {
			return getRuleContext(GoalContext.class,0);
		}
		public ConstraintsContext constraints() {
			return getRuleContext(ConstraintsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PLIModelParser.EOF, 0); }
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public BoundsContext bounds() {
			return getRuleContext(BoundsContext.class,0);
		}
		public Bin_varsContext bin_vars() {
			return getRuleContext(Bin_varsContext.class,0);
		}
		public Int_varsContext int_vars() {
			return getRuleContext(Int_varsContext.class,0);
		}
		public Free_varsContext free_vars() {
			return getRuleContext(Free_varsContext.class,0);
		}
		public Semi_continuous_varsContext semi_continuous_vars() {
			return getRuleContext(Semi_continuous_varsContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HEAD_SECTION) {
				{
				setState(76);
				head();
				}
			}

			setState(79);
			goal();
			setState(80);
			constraints();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BOUNDS_SECTION) {
				{
				setState(81);
				bounds();
				}
			}

			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BIN_SECTION) {
				{
				setState(84);
				bin_vars();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT_SECTION) {
				{
				setState(87);
				int_vars();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FREE_SECTION) {
				{
				setState(90);
				free_vars();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI_SECTION) {
				{
				setState(93);
				semi_continuous_vars();
				}
			}

			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadContext extends ParserRuleContext {
		public TerminalNode HEAD_SECTION() { return getToken(PLIModelParser.HEAD_SECTION, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_head);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(HEAD_SECTION);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1920L) != 0)) {
				{
				{
				setState(99);
				declaration();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GoalContext extends ParserRuleContext {
		public TerminalNode GOAL_SECTION() { return getToken(PLIModelParser.GOAL_SECTION, 0); }
		public ObjectiveContext objective() {
			return getRuleContext(ObjectiveContext.class,0);
		}
		public Linear_exprContext linear_expr() {
			return getRuleContext(Linear_exprContext.class,0);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_goal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(GOAL_SECTION);
			setState(106);
			objective();
			setState(107);
			linear_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintsContext extends ParserRuleContext {
		public TerminalNode CONSTRAINTS_SECTION() { return getToken(PLIModelParser.CONSTRAINTS_SECTION, 0); }
		public List<Set_of_constraintsContext> set_of_constraints() {
			return getRuleContexts(Set_of_constraintsContext.class);
		}
		public Set_of_constraintsContext set_of_constraints(int i) {
			return getRuleContext(Set_of_constraintsContext.class,i);
		}
		public ConstraintsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraints; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterConstraints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitConstraints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitConstraints(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintsContext constraints() throws RecognitionException {
		ConstraintsContext _localctx = new ConstraintsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constraints);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(CONSTRAINTS_SECTION);
			setState(111); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				set_of_constraints();
				}
				}
				setState(113); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 126162365976023056L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoundsContext extends ParserRuleContext {
		public TerminalNode BOUNDS_SECTION() { return getToken(PLIModelParser.BOUNDS_SECTION, 0); }
		public List<Set_of_boundsContext> set_of_bounds() {
			return getRuleContexts(Set_of_boundsContext.class);
		}
		public Set_of_boundsContext set_of_bounds(int i) {
			return getRuleContext(Set_of_boundsContext.class,i);
		}
		public BoundsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bounds; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterBounds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitBounds(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitBounds(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoundsContext bounds() throws RecognitionException {
		BoundsContext _localctx = new BoundsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bounds);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(BOUNDS_SECTION);
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				set_of_bounds();
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 126162363828142096L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bin_varsContext extends ParserRuleContext {
		public TerminalNode BIN_SECTION() { return getToken(PLIModelParser.BIN_SECTION, 0); }
		public List<Set_of_varsContext> set_of_vars() {
			return getRuleContexts(Set_of_varsContext.class);
		}
		public Set_of_varsContext set_of_vars(int i) {
			return getRuleContext(Set_of_varsContext.class,i);
		}
		public Bin_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bin_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterBin_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitBin_vars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitBin_vars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bin_varsContext bin_vars() throws RecognitionException {
		Bin_varsContext _localctx = new Bin_varsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bin_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(BIN_SECTION);
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				set_of_vars();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Int_varsContext extends ParserRuleContext {
		public TerminalNode INT_SECTION() { return getToken(PLIModelParser.INT_SECTION, 0); }
		public List<Set_of_varsContext> set_of_vars() {
			return getRuleContexts(Set_of_varsContext.class);
		}
		public Set_of_varsContext set_of_vars(int i) {
			return getRuleContext(Set_of_varsContext.class,i);
		}
		public Int_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterInt_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitInt_vars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitInt_vars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Int_varsContext int_vars() throws RecognitionException {
		Int_varsContext _localctx = new Int_varsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_int_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(INT_SECTION);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				set_of_vars();
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Free_varsContext extends ParserRuleContext {
		public TerminalNode FREE_SECTION() { return getToken(PLIModelParser.FREE_SECTION, 0); }
		public List<Set_of_varsContext> set_of_vars() {
			return getRuleContexts(Set_of_varsContext.class);
		}
		public Set_of_varsContext set_of_vars(int i) {
			return getRuleContext(Set_of_varsContext.class,i);
		}
		public Free_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_free_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterFree_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitFree_vars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitFree_vars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Free_varsContext free_vars() throws RecognitionException {
		Free_varsContext _localctx = new Free_varsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_free_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(FREE_SECTION);
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				set_of_vars();
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Semi_continuous_varsContext extends ParserRuleContext {
		public TerminalNode SEMI_SECTION() { return getToken(PLIModelParser.SEMI_SECTION, 0); }
		public List<Set_of_varsContext> set_of_vars() {
			return getRuleContexts(Set_of_varsContext.class);
		}
		public Set_of_varsContext set_of_vars(int i) {
			return getRuleContext(Set_of_varsContext.class,i);
		}
		public Semi_continuous_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semi_continuous_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterSemi_continuous_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitSemi_continuous_vars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitSemi_continuous_vars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Semi_continuous_varsContext semi_continuous_vars() throws RecognitionException {
		Semi_continuous_varsContext _localctx = new Semi_continuous_varsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_semi_continuous_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(SEMI_SECTION);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140);
				set_of_vars();
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectiveContext extends ParserRuleContext {
		public ObjectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).enterObjective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PLIModelListener ) ((PLIModelListener)listener).exitObjective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLIModelVisitor ) return ((PLIModelVisitor<? extends T>)visitor).visitObjective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectiveContext objective() throws RecognitionException {
		ObjectiveContext _localctx = new ObjectiveContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_objective);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
